local data storage implemented

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,12 @@
       <div class="form-group">
           <button class="btn btn-default" ng-click="generateToken()">Generate Token</button>
       </div>
+      <div class="form-group pull-right">
+        <div class="btn-group">
+          <button class="btn btn-default" ng-click="load()">Load</button>
+          <button class="btn btn-primary" ng-click="save()">Save</button>
+        </div>
+      </div>
     </form>
     <br />
     <form class="form-inline">
